<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home__frag">Home_Frag</string>
    <string name="title_activity_meter">Meter</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="title_activity_action_bar">ActionBar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="application_title">CarMap</string>
    <string name="navtitle">Dude Where\'s My Car</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="maptitle">My Parking Locations</string>
    <string name="help_settings">Help</string>
    <string name="title_activity_map_help">MapHelpActivity</string>
    <string name="help_text"><b>How to manage parking spots</b>\n\n
        You can add a new parking spot by long-clicking on the map, or by adding an address to the text field.\n\n
        To remove a parking spot click on the marker.\n\nBlue markers indicate a Street Sweeping zone.\n\n
        The <b>North</b> and <b>East</b> sides of the streets are swept on the <b>Second Thursday</b> of the months April-October\n\n
        The <b>South</b> and <b>West</b> sides of the streets are swept on the <b>Second Friday</b> of the months April-October</string>
    <string name="exit_help">Close</string>
    <string name="edit_message">Add by Address</string>
    <string name="button_send">Add</string>
    <string name="street_sweeping"><b>North</b> and <b>East</b> sides of the streets: 4/9/2015\n<b>South</b> and <b>West</b> sides of the streets: 4/10/2015</string>
    <string name="no_street_sweeping">There is no upcoming Street Sweeping</string>
    <string name="clear_list">Clear</string>
    <string name="refresh_list">Refresh</string>
    <string name="add_address">Add Address</string>
    <string name="title_activity_home_activity_test">HomeActivityTest</string>

</resources>
