<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="#676767"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15.5sp"
        android:id="@+id/activity_navigation">
        <TextView
            android:text="@string/navtitle"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
        />
        <ScrollView android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dip">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center" >
        <Button
            android:id="@+id/home"
            android:textSize="30sp"
            android:text="@string/title_activity_home"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            />
        <Button
            android:id="@+id/map"
            android:text="@string/title_activity_maps"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="30sp" />
        <Button
            android:id="@+id/meter"
            android:text="@string/title_activity_meter"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="30sp" />
        <Button
            android:id="@+id/exit"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="30sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>